# stargazer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.devcontainer/cuda/: Dockerfile  devcontainer.json
.devcontainer/rocm/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  axis_calibration_node.hpp  calibration.cpp  calibration.hpp  calibration_pipeline.cpp  calibration_pipeline.hpp  capture.cpp  capture.hpp  capture_pipeline.cpp  capture_pipeline.hpp  config.cpp  config.hpp  config_file.cpp  config_file.hpp  config_tree.cpp  config_tree.hpp  device_info.hpp  epipolar_reconstruct_node.hpp  extrinsic_calibration_pipeline.cpp  extrinsic_calibration_pipeline.hpp  graph_builder.cpp  grpc_server_app.cpp  gui.cpp  gui.hpp  image_reconstruct_node.hpp  image_reconstruction_pipeline.cpp  image_reconstruction_pipeline.hpp  intrinsic_calibration_node.hpp  intrinsic_calibration_pipeline.cpp  intrinsic_calibration_pipeline.hpp  load_panoptic_node.hpp  messages.hpp  mvp_reconstruct_node.hpp  mvpose.cpp  mvpose.hpp  mvpose_cuda.cu  mvpose_cuda.hpp  mvpose_reconstruct_node.hpp  node_info.hpp  object_mux_node.hpp  (+26 more)
app/fonts/: CMakeLists.txt
app/shaders/: convert_shader.py
config/: calibration.json  calibration_dust3r.json  calibration_extrinsic.json  calibration_intrinsic.json  calibration_intrinsic_single_camera.json  calibration_mast3r.json  calibration_scene.json  capture.json  image_reconstruction.json  parameters.json  parameters_color.json  parameters_ir.json  parameters_uncalib.json  point_reconstruction.json  reconstruction.json  reconstruction_image.json  reconstruction_point.json
docs/: Doxyfile  calibration.rst  conf.py  core.rst  index.rst  io.rst  node-reference.md  pipeline-config.md  reconstruction.rst  requirements.txt
fonts/: CMakeLists.txt  convert_font.py
lib/: CMakeLists.txt  action_node.hpp  axis_calibration_node.hpp  calibration_node.hpp  calibration_target.hpp  callback_node.hpp  camera_info.cpp  camera_info.hpp  config.cpp  config.hpp  contrail_render_node.hpp  dump_blob_node.hpp  dump_keypoint_node.hpp  dump_reconstruction_node.hpp  dump_se3_node.hpp  dust3r.cpp  dust3r.hpp  dust3r_alignment.cpp  dust3r_alignment.hpp  dust3r_calibration.cpp  dust3r_calibration.hpp  dust3r_calibration_node.hpp  dust3r_optimizer.cpp  dust3r_optimizer.hpp  dust3r_pose_node.hpp  epipolar_reconstruct_node.hpp  extrinsic_calibration_node.hpp  feature_render_node.hpp  gate_node.hpp  glm_json.hpp  glm_serialize.hpp  graph_builder.cpp  graph_builder.hpp  grpc_server_node.hpp  image_property_node.hpp  image_reconstruct_node.hpp  intrinsic_calibration_node.hpp  keypoint_to_float2_map_node.hpp  load_blob_node.hpp  load_marker_node.hpp  (+39 more)
lib/calibration/: bundle_adjust_data.cpp  bundle_adjust_data.hpp  calibration.cpp  calibration.hpp
lib/core/: coalsack_math_conv.hpp  config.cpp  config.hpp  graph_builder.cpp  graph_builder.hpp  parameters.cpp  pipeline.cpp  pipeline_control_command.hpp  pipeline_control_server.hpp  point_data.hpp
lib/dust3r/: dust3r.hpp  dust3r_alignment.hpp  dust3r_calibration.cpp  dust3r_optimizer.cpp
lib/mast3r/: mast3r.cpp  mast3r.hpp
lib/nodes/: groups.hpp
lib/nodes/calibration/: dust3r_calibration_node.hpp  dust3r_pose_node.hpp  extrinsic_calibration_node.hpp  intrinsic_calibration_node.hpp  mast3r_calibration_node.hpp  pattern_board_calibration_target_detector_node.hpp  scene_calibration_node.hpp  three_point_bar_calibration_target_detector_node.hpp
lib/nodes/core/: contrail_render_node.hpp  feature_render_node.hpp  gate_node.hpp  grpc_server_node.hpp  image_property_node.hpp  keypoint_to_float2_map_node.hpp  marker_property_node.hpp  object_map_node.hpp  object_mux_node.hpp  object_to_frame_node.hpp  unframe_image_fields_node.hpp
lib/nodes/io/: dump_blob_node.hpp  dump_keypoint_node.hpp  dump_reconstruction_node.hpp  dump_se3_node.hpp  load_blob_node.hpp  load_marker_node.hpp  load_panoptic_node.hpp  load_parameter_node.hpp  store_parameter_node.hpp
lib/nodes/reconstruct/: epipolar_reconstruct_node.hpp  image_reconstruct_node.hpp  mvp_reconstruct_node.hpp  mvpose_reconstruct_node.hpp  reconstruction_result_markers_node.hpp  voxelpose_reconstruct_node.hpp
lib/pose/: mvpose.cpp  preprocess.cu  preprocess.hip  preprocess.hpp  voxelpose.cpp  voxelpose.hpp
lib/reconstruction/: correspondance.cpp  correspondance.hpp  reconstruction.cpp  reconstruction.hpp  triangulation.cpp  triangulation.hpp
lib/test/: CMakeLists.txt  test_config.cpp  test_dust3r_alignment.cpp  test_dust3r_calibration.cpp  test_dust3r_inference.cpp  test_mast3r_inference.cpp
lib/test/data/: test_direct_dot_ref.json  test_direct_nodes.json  test_inline_nested.json  test_nested_expansion.json  test_nested_params.json  test_nested_roundtrip.json  test_template_nested_direct.json  test_template_nested_override.json
lib/testdata/: test_cross_ref.json  test_direct_dot_ref.json  test_multiple_subgraphs.json  test_node_override.json  test_param_hierarchy.json  test_roundtrip.json  test_simple_extends.json  test_template_nested_direct.json
models/: download_models.py  restore_onnx.py  split_onnx.py
protos/: CMakeLists.txt  pipeline_control.proto  sensor.proto
reconstruction_app/: CMakeLists.txt  calibration.hpp  capture.cpp  capture.hpp  imgui-fonts-fontawesome.hpp  viewer.cpp  viewer_app.cpp  views.cpp  views.hpp
scripts/: gen_grpc_python.sh  pipeline_ctl.py  test_capture_ir.sh
scripts/pipeline/: gen_calibration_extrinsic.py  gen_calibration_intrinsic.py  gen_calibration_scene.py  gen_capture.py  gen_reconstruction_image.py  gen_reconstruction_point.py  pipeline.py
